style.css
/*
Theme Name: Alley Manalio's Blog Theme
Theme URI:
Author: Alley Manalio
Description: My blog site for Web Interactivity course
Version: 0.1
License: Open
Text Domain: alley_manalio_blog
*/

@import url("stylesheets/normalize.css");
@import url("stylesheets/skeleton.css");

@font-face {
    font-family: TrashHand;
    src: url("fonts/TrashHand.TTF");
}

* {
    color: #000000;
    line-height: 1.5em;
}

body {
    background-color: #31c7bc;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: 700;
}

h1 {
    font-size: 2.5em;
}

h2 {
    font-size: 2em;
}

h3 {
    font-size: 1.6em;
}

h4 {
    font-size: 1.1em;
}

h5 {
    font-size: 1em;
}

p {
    font-family: "Open Sans", sans-serif;
}

a {
    color: #000000;
    text-decoration: none;
}
a:hover {
    color: #31c7bc;
    text-decoration: underline;
}

.container {
    background-image: url("imgs/offwhite_swirls.png");
}

/****** HEADER ******/

header {
    background-color: #cc4484;
}

h1.site-title {
    font-family: TrashHand;
    font-size: 5em;
    letter-spacing: 3px;
    padding: 0;
    margin: 30px 0 0;
    text-align: center;
    font-weight: 500;
}

h1.site-title a {
    color: #ffffff;
}

h1.site-title a:hover {
    text-decoration: none;
}

h2.sub-title {
    font-family: "Open Sans", sans-serif;
    font-size: 1.8em;
    font-weight: 300;
    text-align: center;
    color: #d4d4d4;
    letter-spacing: 2px;
    margin-bottom: 30px;
}

/****** NAVIGATION MENU ******/

.blank-menu-header {
    background-color: #f65697;
    text-align: right;
    padding: 10px 0;
}

.blank-menu-header ul {
    margin: auto;
    padding: 10px;
    list-style-type: none;
    list-style-image: none;
    width: 75%;
}

.blank-menu-header li {
    display: inline;
}

.blank-menu-header ul li a {
    font-family: "Raleway", sans-serif;
    margin: 0 20px;
    color: white;
    text-decoration: none;
    font-weight: 300;
    font-size: 1.2em;
    letter-spacing: 1px;
    text-transform: uppercase;
}

.blank-menu-header ul li a:hover {
    border-bottom: 3px solid #ff9cc4;
    padding-bottom: 5px;
    margin: 5px 20px;
}

.current-menu-item a {
    padding-bottom: 5px;
    border-bottom: 3px solid #cc4484;
}

/****** POSTS ******/

.postcontainer {
    padding-top: 50px;
}

h3.header {
    padding-top: 5px;
    margin-bottom: 10px;
    font-family: "Raleway", sans-serif;
    text-transform: uppercase;
    font-weight: 600;
    text-align: center;
}

.time {
    font-family: "Open Sans", sans-serif;
    text-transform: uppercase;
    font-weight: bold;
    padding-bottom: 15px;
    text-align: center;
}

.post {
    padding: 10px;
    background-color: white;
    border: 3px solid #dddddd;
    margin: 0 0 10px 10px;
}

.post img {
    padding-bottom: 10px;
    border-bottom: 1px black solid;
    width: 100%;
    height: auto;
    margin: -2px;
}

.button-container {
    text-align: center;
}

.button a {
    padding: 10px 10px;
    color: #555;
    text-align: center;
    font-weight: 600;
    text-transform: uppercase;
    text-decoration: none;
    border-radius: 4px;
    border: 1px solid #bbb;
}

.button a:hover {
    border: 1px #666666 solid;
    text-decoration: none;
}

/****** SIDEBAR ******/

.sidebar {
    background-color: #cc4484;
    margin-top: 25px;
    padding: 15px;
    border-radius: 25px;
}

.sidebar-title {
    font-family: TrashHand;
    font-size: 3em;
    color: #ffffff;
    letter-spacing: 2px;
    text-align: center;
    font-weight: 100;
}

.sidebar h3 {
    text-align: center;
    font-weight: 400;
    text-transform: uppercase;
    color: #000000;
    background-color: #f65697;
    padding: 10px 0;
    letter-spacing: 1px;
}

.widget-easy-twitter-feed-widget-global-wrapper h3 {
    background-color: #f65697;
    padding: 10px 0;
}

.textwidget a {
    height: 38px;
    padding: 10px 30px;
    color: #555;
    text-align: center;
    font-size: 11px;
    font-weight: 600;
    line-height: 38px;
    letter-spacing: .1rem;
    text-transform: uppercase;
    text-decoration: none;
    border-radius: 4px;
    border: 1px solid #bbb;
}

.textwidget a:hover {
    border: 1px #666666 solid;
}

.tagcloud {
    font-size: 16px;
}

.searchform,
.textwidget,
.tagcloud {
    background-color: #ffffff;
    padding: 15px;
    text-align: center;
}

.widget-easy-twitter-feed-widget-global-wrapper {
    margin-top: 20px;
    text-align: center;
}

.tagcloud a {
    font-size: 1em;
}

/****** FOOTER ******/

footer {
    background-color: #ffffff;
    padding: 40px;
}

footer .textwidget {
    text-align: left;
    padding: 0;
}

.icons-large ul {
    list-style-type: none;
}

.icons-large li {
    display: inline;
    padding-right: 5px;
}

/****** OPENED POSTS + PAGES + ARCHIVES ******/

.full-page-posts {
    padding: 50px;
}

.full-page-posts-title {
    padding: 50px 50px 0 50px;
}

.full-page-posts p {
    font-size: 1.1em;
}

.full-page-posts a {
    color: #31c7bc;
    font-weight: bold;
}

.full-page-posts a:hover {
    color: #f65697;
    font-weight: bold;
}

#attachment_103 {
    margin: auto;
}

